# PGMCMC

./: LICENSE  README.md  pgmcmc.py  pgmcmc_report.py  pgmcmc_user.py
examples/: fit_weibull.py  fit_weibull_censor.py  fit_weibull_mix.py  fit_weibull_mix_censor.py  fit_weibull_mix_censor_remix.py  fit_weibull_mix_censor_show.py
pgmcmc_forc/: CMakeLists.txt  notes.txt
pgmcmc_forc/include/: pgmcmc.h
pgmcmc_forc/src/: gen_linear_data.c  pgmcmc_core.c  pgmcmc_forc.c  pgmcmc_report.c
